--- a/oap-storage-mongo/pom.xml
+++ b/oap-storage-mongo/pom.xml
@@ -38,14 +38,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
+            <groupId>oap</groupId>
             <artifactId>oap-storage</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>oap-json</artifactId>
-            <version>${oap.version}</version>
         </dependency>
 
         <dependency>
