--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -38,13 +38,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
+            <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>${oap.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>oap-json</artifactId>
             <version>${oap.version}</version>
         </dependency>
 
