--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
             <id>oap</id>
             <url>https://mvn.oaplatform.org</url>
         </repository>
+        <repository>
+            <id>projectlombok.org</id>
+            <url>https://projectlombok.org/edge-releases</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -61,7 +65,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>6.0.0</revision>
+        <revision>6.0.1</revision>
 
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
@@ -70,14 +74,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
-        <oap.version>6.0.0</oap.version>
+        <oap.version>6.0.2</oap.version>
         <testng.version>6.11</testng.version>
         <assertj.version>3.12.2</assertj.version>
         <guava.version>27.1-jre</guava.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
         <joda.version>2.10.1</joda.version>
-        <lombok.version>1.18.10</lombok.version>
+        <lombok.version>edge-SNAPSHOT</lombok.version>
         <mongo.version>3.10.2</mongo.version>
     </properties>
 
