--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>oap</groupId>
+        <artifactId>oap.maven</artifactId>
+        <version>1.0.8</version>
+    </parent>
+
     <packaging>pom</packaging>
-    <groupId>oap</groupId>
     <artifactId>oap-storage-parent</artifactId>
-    <version>${revision}</version>
+    <version>${oap.project.version}</version>
 
-    <name>oap</name>
-
-    <prerequisites>
-        <maven>3.5.0</maven>
-    </prerequisites>
+    <name>oap-storage-parent</name>
 
     <modules>
         <module>oap-storage</module>
@@ -51,10 +52,6 @@
             <id>oap</id>
             <url>https://mvn.oaplatform.org</url>
         </repository>
-        <repository>
-            <id>projectlombok.org</id>
-            <url>https://projectlombok.org/edge-releases</url>
-        </repository>
     </repositories>
 
     <distributionManagement>
@@ -65,140 +62,15 @@
     </distributionManagement>
 
     <properties>
-        <revision>6.2.2</revision>
+        <oap.project.version>6.3.0</oap.project.version>
 
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
 
-        <encoding>UTF-8</encoding>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
-
-        <oap.version>6.2.4</oap.version>
-        <assertj.version>3.12.2</assertj.version>
-        <guava.version>28.1-jre</guava.version>
-        <logback.version>1.2.3</logback.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <lombok.version>edge-SNAPSHOT</lombok.version>
-        <mongo.version>3.10.2</mongo.version>
+        <oap.deps.oap.version>6.7.5</oap.deps.oap.version>
+        <oap.deps.assertj.version>3.15.0</oap.deps.assertj.version>
+        <oap.deps.guava.version>28.1-jre</oap.deps.guava.version>
+        <oap.deps.logback.version>1.2.3</oap.deps.logback.version>
+        <oap.deps.slf4j.version>1.7.21</oap.deps.slf4j.version>
+        <oap.deps.lombok.version>1.18.12</oap.deps.lombok.version>
+        <oap.deps.mongo.version>3.10.2</oap.deps.mongo.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <useIncrementalCompilation>true</useIncrementalCompilation>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                        <arg>-Xlint:unchecked</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <argLine>
-                        -ea
-                        --enable-preview
-                        -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
-                    </argLine>
-                    <trimStackTrace>false</trimStackTrace>
-                    <!--TODO: remove this ignore once all tests pass
-                         For tests dependent on the external services, make the separate profile to run them
-                         within a specific environment-->
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <useFile>true</useFile>
-                    <disableXmlReport>false</disableXmlReport>
-                    <printSummary>true</printSummary>
-                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
-                    <!--<forkMode>once</forkMode>-->
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <runOrder>balanced</runOrder>
-                    <includes>
-                        <include>**/*Test.*</include>
-                        <include>**/*TestCase.*</include>
-                        <include>**/*Suite.*</include>
-                    </includes>
-                    <excludedGroups>PERFORMANCE</excludedGroups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <version>3.0.1</version>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.1.0</version>
-                <configuration>
-                    <updatePomFile>true</updatePomFile>
-                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>flatten</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>flatten</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>flatten.clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>PERFORMANCE</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
-                        <configuration>
-                            <argLine>
-                                -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-perf.xml
-                                --enable-preview
-                            </argLine>
-                            <trimStackTrace>false</trimStackTrace>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <useFile>true</useFile>
-                            <disableXmlReport>false</disableXmlReport>
-                            <printSummary>true</printSummary>
-                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
-                            <forkMode>once</forkMode>
-                            <useSystemClassLoader>false</useSystemClassLoader>
-                            <runOrder>balanced</runOrder>
-                            <includes>
-                                <include>**/*Performance.*</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
