--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap-storage-parent</artifactId>
-        <version>${oap.project.version}</version>
+        <version>${oap.storage.project.version}</version>
     </parent>
 
     <dependencies>
