--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <packaging>pom</packaging>
     <artifactId>oap-storage-parent</artifactId>
-    <version>${oap.project.version}</version>
+    <version>${oap.storage.project.version}</version>
 
     <name>oap-storage-parent</name>
 
@@ -62,15 +62,16 @@
     </distributionManagement>
 
     <properties>
-        <oap.project.version>6.3.1</oap.project.version>
+        <oap.storage.project.version>6.4.0</oap.storage.project.version>
 
 
         <oap.deps.oap.version>6.7.5</oap.deps.oap.version>
         <oap.deps.assertj.version>3.15.0</oap.deps.assertj.version>
-        <oap.deps.guava.version>28.1-jre</oap.deps.guava.version>
+        <oap.deps.guava.version>28.2-jre</oap.deps.guava.version>
         <oap.deps.logback.version>1.2.3</oap.deps.logback.version>
         <oap.deps.slf4j.version>1.7.21</oap.deps.slf4j.version>
         <oap.deps.lombok.version>1.18.12</oap.deps.lombok.version>
         <oap.deps.mongo.version>3.10.2</oap.deps.mongo.version>
+        <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
     </properties>
 </project>
