databaseName and databaseAlias introduced for migration testing support

--- a/oap-storage-mongo/src/test/resources/META-INF/oap-mongo-migration.yaml
+++ b/oap-storage-mongo/src/test/resources/META-INF/oap-mongo-migration.yaml
@@ -1,5 +1,5 @@
 migrations:
-  ${DATABASE}:
+  beans:
     - version:
         main: 2
       script: /oap/storage/MongoPersistenceTest/migration/2.migration.js
