--- a/oap-storage-mongo/src/test/resources/oap/storage/mongo/MongoClientTest/2/config2.yaml
+++ b/oap-storage-mongo/src/test/resources/oap/storage/mongo/MongoClientTest/2/config2.yaml
@@ -1,5 +1,5 @@
 migrations:
-  ${DATABASE}:
+  testdb:
     - version:
         main: 2
       script: /oap/storage/mongo/MongoClientTest/2/2.migration.js
