--- a/oap-storage-mongo/src/test/resources/oap/storage/mongo/MongoClientTest/9/config9.yaml
+++ b/oap-storage-mongo/src/test/resources/oap/storage/mongo/MongoClientTest/9/config9.yaml
@@ -1,5 +1,5 @@
 migrations:
-  ${DATABASE}:
+  testdb:
     - version:
         main: 9
       script: /oap/storage/mongo/MongoClientTest/9/9.migration.js
