--- a/pom.xml
+++ b/pom.xml
@@ -55,15 +55,16 @@
     </repositories>
 
     <properties>
-        <oap.storage.project.version>6.6.8</oap.storage.project.version>
+        <oap.storage.project.version>6.7.0</oap.storage.project.version>
 
-        <oap.deps.oap.version>6.8.9</oap.deps.oap.version>
+        <oap.deps.oap.version>6.8.10</oap.deps.oap.version>
         <oap.deps.assertj.version>3.15.0</oap.deps.assertj.version>
         <oap.deps.guava.version>28.2-jre</oap.deps.guava.version>
         <oap.deps.logback.version>1.2.3</oap.deps.logback.version>
         <oap.deps.slf4j.version>1.7.21</oap.deps.slf4j.version>
         <oap.deps.lombok.version>1.18.12</oap.deps.lombok.version>
-        <oap.deps.mongo.version>3.10.2</oap.deps.mongo.version>
+        <oap.deps.mongo.version>3.12.3</oap.deps.mongo.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
+        <oap.deps.mongo-java-server.version>1.27.0</oap.deps.mongo-java-server.version>
     </properties>
 </project>
