--- a/oap-storage-mongo/pom.xml
+++ b/oap-storage-mongo/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>mongo-java-server</artifactId>
             <version>${oap.deps.mongo-java-server.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-common</artifactId>
+            <version>${oap.deps.netty.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
