--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     </repositories>
 
     <properties>
-        <oap.storage.project.version>6.7.0</oap.storage.project.version>
+        <oap.storage.project.version>6.7.1</oap.storage.project.version>
 
         <oap.deps.oap.version>6.8.10</oap.deps.oap.version>
         <oap.deps.assertj.version>3.15.0</oap.deps.assertj.version>
@@ -66,5 +66,6 @@
         <oap.deps.mongo.version>3.12.3</oap.deps.mongo.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.mongo-java-server.version>1.27.0</oap.deps.mongo-java-server.version>
+        <oap.deps.netty.version>4.1.48.Final</oap.deps.netty.version>
     </properties>
 </project>
