support mongo from path

--- a/oap-storage-mongo/src/test/resources/META-INF/json-mapping.properties
+++ b/oap-storage-mongo/src/test/resources/META-INF/json-mapping.properties
@@ -1,1 +1,3 @@
-bean=oap.storage.MongoPersistenceTest$Bean
+bean=oap.storage.Bean
+a=oap.storage.MongoPersistenceTest$PolyBeanA
+b=oap.storage.MongoPersistenceTest$PolyBeanB
