--- a/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
@@ -11,6 +11,7 @@ services {
       port = <change me>
       //      port = 27017
       database = <change me>
+      migrations = true
 
       shell = modules.this.oap-storage-mongo-shell
     }
