--- a/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
@@ -1,4 +1,4 @@
-    name = oap-storage-mongo
+name = oap-storage-mongo
 services {
   oap-storage-mongo-shell {
     implementation = oap.storage.mongo.MongoShell
@@ -6,6 +6,12 @@ services {
 
   mongo-client {
     implementation: oap.storage.mongo.MongoClient
+    parameters {
+//      port = ...
+//      host = ...
+//      database = ...
+      shell = modules.this.oap-storage-mongo-shell
+    }
     supervision.supervise = true
   }
 }
