--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <modules>
         <module>oap-storage</module>
         <module>oap-storage-mongo</module>
-<!--        <module>oap-storage-dynamo</module>-->
+        <module>oap-storage-dynamo</module>
     </modules>
 
     <repositories>
@@ -56,7 +56,7 @@
     </repositories>
 
     <properties>
-        <oap-storage.project.version>17.9.8.6</oap-storage.project.version>
+        <oap-storage.project.version>17.9.8.7</oap-storage.project.version>
         <oap-dynamodb.version>17.4.3.7</oap-dynamodb.version>
 
         <oap.deps.oap.version>17.10.24.2</oap.deps.oap.version>
