--- a/oap-storage-dynamo/pom.xml
+++ b/oap-storage-dynamo/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>oap-dynamo-db</artifactId>
             <version>${oap-dynamodb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${oap.deps.testcontainers.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
