some improvements, tests for dynamodb reset ignore flag

--- a/oap-storage-dynamo-client/src/test/resources/oap/storage/dynamo/client/test-application.conf
+++ b/oap-storage-dynamo-client/src/test/resources/oap/storage/dynamo/client/test-application.conf
@@ -4,7 +4,7 @@ profiles = [with-dynamodb]
 
 services {
   oap-dynamodb {
-    dynamodb-log.parameters.level: DEBUG
+    dynamodb-log.parameters.level: INFO
 
     dynamodb-client-reader.parameters {
       protocol = http
