--- a/oap-storage-dynamo/src/test/resources/oap/storage/dynamo/test-application.conf
+++ b/oap-storage-dynamo/src/test/resources/oap/storage/dynamo/test-application.conf
@@ -4,7 +4,7 @@ profiles = [with-dynamodb]
 
 services {
   oap-dynamodb {
-    dynamodb-log.parameters.level: DEBUG
+    dynamodb-log.parameters.level: INFO
 
     dynamodb-client-reader.parameters {
       protocol = http
