--- a/oap-storage-dynamo-client/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-dynamo-client/src/main/resources/META-INF/oap-module.conf
@@ -7,6 +7,7 @@ services {
     implementation = oap.storage.dynamo.client.DynamodbLog
     parameters {
       level = INFO
+      clientLevel = DEBUG
     }
   }
 
