--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
     <modules>
         <module>oap-storage</module>
-<!--        <module>oap-storage-mongo</module>-->
+        <module>oap-storage-mongo</module>
         <module>oap-storage-dynamo-client</module>
         <module>oap-storage-dynamo</module>
     </modules>
