--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>17.3.7.5</version>
+        <version>17.3.4.0</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -67,9 +67,9 @@
         <oap.deps.logback.version>1.4.5</oap.deps.logback.version>
         <oap.deps.slf4j.version>2.0.6</oap.deps.slf4j.version>
         <oap.deps.lombok.version>1.18.24</oap.deps.lombok.version>
-        <oap.deps.mongo.version>3.12.11</oap.deps.mongo.version>
-        <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
+        <oap.deps.mongo-java-driver.version>3.12.11</oap.deps.mongo-java-driver.version>
         <oap.deps.mongo-java-server.version>1.43.0</oap.deps.mongo-java-server.version>
+        <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.netty.version>4.1.86.Final</oap.deps.netty.version>
         <oap.deps.testcontainers.version>1.17.6</oap.deps.testcontainers.version>
     </properties>
