--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,20 +31,21 @@
 
 version: 2
 
-registries:
-  maven-oap:
-    type: maven-repository
-    url: https://mvn.oaplatform.org
+#registries:
+#  maven-oap:
+#    type: maven-repository
+#    url: https://mvn.oaplatform.org
+#    username: xenoss
+#    password: ${{secrets.MY_ARTIFACTORY_PASSWORD}}
 
 # Maintain dependencies for Maven
 updates:
   - package-ecosystem: "maven"
     directory: "/" # Location of package manifests
-    registries:
-      -   maven-oap
+#    registries:
+#      -   maven-oap
     open-pull-requests-limit: 2
     schedule:
       interval: "monthly"
     allow:
-      - dependency-name: "oap:oap-stdlib"
-      - dependency-name: "oap:oap-dynamo-db"
+      - dependency-name: "oap:*"
