--- a/oap-storage-dynamo-client/pom.xml
+++ b/oap-storage-dynamo-client/pom.xml
@@ -57,6 +57,13 @@
     <dependencies>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bom</artifactId>
+            <version>${oap.deps.dynamodb.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>dynamodb</artifactId>
             <version>${oap.deps.dynamodb.version}</version>
         </dependency>
@@ -67,9 +74,25 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>kms</artifactId>
+            <version>${oap.deps.dynamodb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>dax</artifactId>
             <version>${oap.deps.dynamodb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.cryptography</groupId>
+            <artifactId>aws-database-encryption-sdk-dynamodb</artifactId>
+            <version>${oap.deps.dynamodb.encryption.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.cryptography</groupId>
+            <artifactId>aws-cryptographic-material-providers</artifactId>
+            <version>${oap.deps.dynamodb.cryptographic-material-providers.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
