--- a/oap-storage-dynamo/pom.xml
+++ b/oap-storage-dynamo/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>commons-exec</artifactId>
             <version>${oap.deps.apache.exec.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.zaxxer</groupId>-->
+<!--            <artifactId>nuprocess</artifactId>-->
+<!--            <version>2.0.6</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
