--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
     </repositories>
 
     <properties>
-        <oap-storage.project.version>18.10.4</oap-storage.project.version>
+        <oap-storage.project.version>18.10.5</oap-storage.project.version>
 
-        <oap.deps.oap.version>18.11.7.1966</oap.deps.oap.version>
+        <oap.deps.oap.version>18.13.0.log_formats.2032</oap.deps.oap.version>
 
         <oap.deps.dynamodb.version>2.20.125</oap.deps.dynamodb.version>
         <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
