--- a/pom.xml
+++ b/pom.xml
@@ -56,14 +56,14 @@
     <properties>
         <oap-storage.project.version>18.10.5</oap-storage.project.version>
 
-        <oap.deps.oap.version>18.13.0.log_formats.2032</oap.deps.oap.version>
+        <oap.deps.oap.version>18.13.0</oap.deps.oap.version>
 
         <oap.deps.dynamodb.version>2.20.125</oap.deps.dynamodb.version>
         <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
         <oap.deps.guava.version>31.1-jre</oap.deps.guava.version>
         <oap.deps.logback.version>1.4.8</oap.deps.logback.version>
         <oap.deps.slf4j.version>2.0.7</oap.deps.slf4j.version>
-        <oap.deps.lombok.version>1.18.28</oap.deps.lombok.version>
+        <oap.deps.lombok.version>1.18.30</oap.deps.lombok.version>
         <oap.deps.mongo-java-driver.version>3.12.14</oap.deps.mongo-java-driver.version>
         <oap.deps.mongo-java-server.version>1.44.0</oap.deps.mongo-java-server.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
