--- a/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
@@ -1,16 +1,12 @@
 name = oap-storage-mongo
 services {
-  oap-storage-mongo-shell {
-    implementation = oap.storage.mongo.MongoShell
-  }
-
   mongo-client {
     implementation: oap.storage.mongo.MongoClient
     parameters {
+      url = 
 //      port = ...
 //      host = ...
 //      database = ...
-      shell = modules.this.oap-storage-mongo-shell
     }
     supervision.supervise = true
   }
