--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
         <oap.deps.lombok.version>1.18.30</oap.deps.lombok.version>
         <oap.deps.mongo-java-driver.version>3.12.14</oap.deps.mongo-java-driver.version>
         <oap.deps.mongo-java-server.version>1.44.0</oap.deps.mongo-java-server.version>
+        <oap.deps.mongock.version>5.3.5</oap.deps.mongock.version>
+        <oap.deps.mongodb-sync-v4-driver.version>5.3.5</oap.deps.mongodb-sync-v4-driver.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.netty.version>4.1.94.Final</oap.deps.netty.version>
         <oap.deps.testcontainers.version>1.18.3</oap.deps.testcontainers.version>
