--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>18.3.7.5</version>
+        <version>21.0.0</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -49,14 +49,14 @@
         </repository>
         <repository>
             <id>oap</id>
-            <url>https://mvn.oaplatform.org</url>
+            <url>https://artifacts.oaplatform.org/repository/maven/</url>
         </repository>
     </repositories>
 
     <properties>
-        <oap-storage.project.version>18.10.6</oap-storage.project.version>
+        <oap-storage.project.version>21.0.0</oap-storage.project.version>
 
-        <oap.deps.oap.version>18.13.0</oap.deps.oap.version>
+        <oap.deps.oap.version>21.0.0</oap.deps.oap.version>
 
         <oap.deps.dynamodb.version>2.20.125</oap.deps.dynamodb.version>
         <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
@@ -66,6 +66,8 @@
         <oap.deps.lombok.version>1.18.30</oap.deps.lombok.version>
         <oap.deps.mongo-java-driver.version>3.12.14</oap.deps.mongo-java-driver.version>
         <oap.deps.mongo-java-server.version>1.44.0</oap.deps.mongo-java-server.version>
+        <oap.deps.mongock.version>5.3.5</oap.deps.mongock.version>
+        <oap.deps.mongodb-sync-v4-driver.version>5.3.5</oap.deps.mongodb-sync-v4-driver.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.netty.version>4.1.94.Final</oap.deps.netty.version>
         <oap.deps.testcontainers.version>1.18.3</oap.deps.testcontainers.version>
