--- a/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
+++ b/oap-storage-mongo/src/main/resources/META-INF/oap-module.conf
@@ -3,7 +3,8 @@ services {
   mongo-client {
     implementation: oap.storage.mongo.MongoClient
     parameters {
-      url = 
+      connectionString = "mongodb://<host>:<port>/<database>"
+//      migrationPackage = "my,migrations"
 //      port = ...
 //      host = ...
 //      database = ...
