--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     </repositories>
 
     <properties>
-        <oap-storage.project.version>21.0.2</oap-storage.project.version>
+        <oap-storage.project.version>21.0.4</oap-storage.project.version>
 
         <oap.deps.oap.version>21.0.0</oap.deps.oap.version>
 
@@ -68,6 +68,7 @@
         <oap.deps.mongo-java-server.version>1.44.0</oap.deps.mongo-java-server.version>
         <oap.deps.mongock.version>5.3.5</oap.deps.mongock.version>
         <oap.deps.mongodb-sync-v4-driver.version>5.3.5</oap.deps.mongodb-sync-v4-driver.version>
+        <oap.deps.javassist.version>3.29.2-GA</oap.deps.javassist.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.netty.version>4.1.94.Final</oap.deps.netty.version>
         <oap.deps.testcontainers.version>1.18.3</oap.deps.testcontainers.version>
