test code isolation

--- a/oap-storage/pom.xml
+++ b/oap-storage/pom.xml
@@ -19,6 +19,13 @@
             <version>${oap.deps.oap.version}</version>
         </dependency>
         <dependency>
+            <groupId>oap</groupId>
+            <artifactId>oap-stdlib-test</artifactId>
+            <version>${oap.deps.oap.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>${oap.deps.jol.version}</version>
