--- a/oap-storage-dynamo-client-test/pom.xml
+++ b/oap-storage-dynamo-client-test/pom.xml
@@ -26,10 +26,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <artifactId>oap-storage-dynamo</artifactId>
-    <name>oap-storage-dynamo</name>
-
     <parent>
         <artifactId>oap-storage-parent</artifactId>
         <groupId>oap</groupId>
@@ -37,67 +33,32 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>oap-storage-dynamo-client-test</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-storage</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>oap</groupId>
             <artifactId>oap-storage-dynamo-client</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-storage-dynamo-client-test</artifactId>
-            <version>${project.parent.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>oap</groupId>
-            <artifactId>oap-stdlib</artifactId>
+            <artifactId>oap-stdlib-test</artifactId>
             <version>${oap.deps.oap.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-exec</artifactId>
-            <version>${oap.deps.apache.exec.version}</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${oap.deps.testcontainers.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.zaxxer</groupId>-->
-<!--            <artifactId>nuprocess</artifactId>-->
-<!--            <version>2.0.6</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-common</artifactId>
-            <version>${oap.deps.netty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-buffer</artifactId>
-            <version>${oap.deps.netty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${oap.deps.slf4j.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${oap.deps.lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-            <version>${oap.deps.testcontainers.version}</version>
-        </dependency>
     </dependencies>
-
 </project>
