--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,9 @@
     <modules>
         <module>oap-storage</module>
         <module>oap-storage-mongo</module>
+        <module>oap-storage-mongo-test</module>
         <module>oap-storage-dynamo-client</module>
+        <module>oap-storage-dynamo-client-test</module>
         <module>oap-storage-dynamo</module>
     </modules>
 
@@ -54,9 +56,9 @@
     </repositories>
 
     <properties>
-        <oap-storage.project.version>21.0.6</oap-storage.project.version>
+        <oap-storage.project.version>21.1.0</oap-storage.project.version>
 
-        <oap.deps.oap.version>21.1.2</oap.deps.oap.version>
+        <oap.deps.oap.version>21.2.0</oap.deps.oap.version>
 
         <oap.deps.dynamodb.version>2.20.125</oap.deps.dynamodb.version>
         <oap.deps.assertj.version>3.23.1</oap.deps.assertj.version>
