--- a/oap-storage-mongo/pom.xml
+++ b/oap-storage-mongo/pom.xml
@@ -49,8 +49,8 @@
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${oap.deps.mongo-java-driver.version}</version>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>${oap.deps.mongo-driver-sync.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
