--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,10 @@
         <oap.deps.logback.version>1.4.8</oap.deps.logback.version>
         <oap.deps.slf4j.version>2.0.7</oap.deps.slf4j.version>
         <oap.deps.lombok.version>1.18.30</oap.deps.lombok.version>
-        <oap.deps.mongo-java-driver.version>3.12.14</oap.deps.mongo-java-driver.version>
+        <oap.deps.mongo-driver-sync.version>4.11.1</oap.deps.mongo-driver-sync.version>
         <oap.deps.mongo-java-server.version>1.44.0</oap.deps.mongo-java-server.version>
-        <oap.deps.mongock.version>5.3.5</oap.deps.mongock.version>
-        <oap.deps.mongodb-sync-v4-driver.version>5.3.5</oap.deps.mongodb-sync-v4-driver.version>
+        <oap.deps.mongock.version>5.4.0</oap.deps.mongock.version>
+        <oap.deps.mongodb-sync-v4-driver.version>5.4.0</oap.deps.mongodb-sync-v4-driver.version>
         <oap.deps.javassist.version>3.29.2-GA</oap.deps.javassist.version>
         <oap.deps.apache.exec.version>1.3</oap.deps.apache.exec.version>
         <oap.deps.netty.version>4.1.94.Final</oap.deps.netty.version>
